--- a/src/pages/DepartmentSection/DepartmentSeccion.css
+++ b/src/pages/DepartmentSection/DepartmentSeccion.css
@@ -7,9 +7,9 @@
   overflow: hidden;
 }
 
-.department > * {
+/* .department > * {
   border: 1px solid red;
-}
+} */
 
 .department__title {
   font-family: var(--font-family-fredericka-the-great);
@@ -22,68 +22,7 @@
   justify-content: center;
   gap: 50px;
 }
-
+/* 
 .department__dishes > * {
   border: 1px solid green;
-}
-
-.department_dish {
-  width: 25%;
-  height: 800px;
-  padding: 0 25px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  justify-content: center;
-  background-color: var(--color-orange-brown);
-}
-
-.department_dish > * {
-  border: 1px solid blue;
-}
-
-.department__dish-image {
-  width: 100%;
-  /* filter: drop-shadow(0, 0, 10px, rgba(0, 0, 0, 0.8)); */
-}
-
-.department__dish-name {
-  font-family: var(--font-family-freckle-face);
-  font-weight: 400;
-  color: white;
-  font-size: 3rem;
-  text-align: center;
-  text-shadow: -2px 2px 15px rgba(0, 0, 0, 1);
-}
-
-.department__dish-options {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  margin-top: 20px;
-}
-
-.department__dish-option {
-  /* border: 1px solid yellow; */
-  width: 100%;
-  height: 55px;
-  padding: 0 20px;
-  text-align: center;
-  align-content: center;
-  cursor: pointer;
-  font-size: 1.3rem;
-  font-family: var(--font-family-cabin-sketch);
-}
-
-.department__learn-more {
-  background-color: black;
-  color: white;
-}
-
-.department__history-ai {
-  background-color: white;
-  color: black;
-}
+} */
