--- a/src/pages/ChatMiskito/ChatMiskito.css
+++ b/src/pages/ChatMiskito/ChatMiskito.css
@@ -11,7 +11,7 @@
 }
 
 .chat-miskito__chat-introduction {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   padding-top: 75px;
   width: 100%;
   height: 75vh;
@@ -26,16 +26,16 @@
 }
 
 .chat-miskito__introduction {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 35px;
 }
 
-.chat-miskito__introduction > * {
+/* .chat-miskito__introduction > * {
   border: 1px solid red;
-}
+} */
 
 .chat-miskito__paragraph {
   width: 300px;
@@ -50,7 +50,7 @@
 }
 
 .chat-miskito__chat {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   width: 900px;
   max-height: 65vh;
   overflow-y: auto;
