--- a/src/components/Miskito/Miskito.css
+++ b/src/components/Miskito/Miskito.css
@@ -6,7 +6,6 @@
   align-items: center;
   user-select: none;
   /* bottom: 60px; */
-  bottom: 5vh;
   z-index: 2;
 }
 
@@ -17,23 +16,25 @@
 
 .miskito__box-position--right {
   right: 30px;
+  bottom: 5vh;
   flex-direction: row-reverse;
 }
 /* --- */
 
 .miskito__image {
   cursor: pointer;
+  height: 20vh;
   transition: scale 0.35s ease-in-out;
 }
 
 /* Tamaños para la IMG de Miskito */
-.miskito__image-size--home-region {
+/* .miskito__image-size--home-region {
   height: 20vh;
 }
 
 .miskito__image-size--region-section {
   height: 20vh;
-}
+} */
 /* --- */
 
 .miskito__image:hover {
@@ -51,13 +52,44 @@
   padding: 0 18px;
   border-radius: 5px;
   opacity: 0;
-  transform: translateX(-80px);
+  transform: translateX(60px);
   transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
 }
 
 .miskito__text--show {
   opacity: 1;
-  transform: translateX(-15px);
+  transform: translateX(-5px);
 }
 
-/* Si deseo que el texto aparezca de Derecha a Izquierda debo cambiar el transform de miskito__text a -15px y transform de miskito__text--show a -80 */
+@media (min-width: 1600px) {
+}
+@media (min-width: 1200px) and (max-width: 1599px) {
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .miskito__image {
+    height: 17vh;
+  }
+}
+@media (min-width: 520px) and (max-width: 767px) {
+  .miskito__image {
+    height: 17vh;
+  }
+
+  .miskito__box-position--right {
+    right: 20px;
+    bottom: 4vh;
+  }
+}
+
+@media (max-width: 519px) {
+  .miskito__image {
+    height: 15vh;
+  }
+
+  .miskito__box-position--right {
+    right: 10px;
+    bottom: 3vh;
+  }
+}
