--- a/src/components/DishDepartment/DishDepartment.css
+++ b/src/components/DishDepartment/DishDepartment.css
@@ -38,7 +38,7 @@
   width: 100%;
   height: 55px;
   padding: 0 20px;
-  /* border: none; */
+  border: none;
   text-align: center;
   align-content: center;
   cursor: pointer;
