--- a/src/components/DishHistoryModal/DishHistoryModal.css
+++ b/src/components/DishHistoryModal/DishHistoryModal.css
@@ -1,33 +1,33 @@
 .dish-history-modal {
-  border: 1px solid red;
   position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
-  /* display: flex; */
+  display: none;
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 3;
-  display: none;
   opacity: 0;
-  /* transition: opacity 0.3s ease-in-out; */
 }
 
-/* Creo que quito la transicion porque la espera de la respuesta de la IA la kga */
 .dish-history-modal--show {
   display: flex;
   opacity: 1;
 }
 
+/* Aplicamos estilos en la parte vacía de .dish-history-modal */
+.dish-history-modal:not(:has(.dish-history-modal__box:hover)) {
+  cursor: pointer;
+}
+
 .dish-history-modal__box {
   border: 3px solid var(--color-orange-brown);
   border-radius: 18px;
-  /* overflow: hidden; */
   background-color: white;
-  padding: 30px 60px 70px;
-
+  padding: 30px 60px 60px;
   width: 80%;
+  max-height: 90vh;
   display: flex;
   flex-direction: column;
   gap: 25px;
@@ -43,23 +43,21 @@
 }
 
 .dish-history-modal__dish-data {
-  border: 1px solid green;
   display: flex;
   justify-content: center;
-  /* align-items: center; */
-  gap: 40px;
+  gap: 50px;
 }
 
 .dish-history-modal__image {
-  border: 1px solid pink;
   height: 400px;
   align-self: center;
 }
 
 .dish-history-modal__history {
-  border: 1px solid red;
+  min-width: 460px;
   font-size: 1.2rem;
   max-height: 500px;
+  padding-right: 15px;
   overflow-y: auto;
 }
 
@@ -81,4 +79,104 @@
 
 .dish-history-modal__back-button:hover {
   scale: 1.2;
+}
+
+@media (max-width: 1499px) {
+  .dish-history-modal__image {
+    height: 350px;
+  }
+}
+
+@media (max-width: 1269px) {
+  .dish-history-modal__image {
+    height: 320px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .dish-history-modal__box {
+    gap: 0px;
+  }
+
+  .dish-history-modal__dish-data {
+    flex-direction: column;
+    gap: 0px;
+  }
+
+  .dish-history-modal__history {
+    max-height: 270px;
+    min-width: 320px;
+  }
+}
+
+@media (max-width: 560px) {
+  .dish-history-modal__title {
+    font-size: 2.3rem;
+  }
+
+  .dish-history-modal__box {
+    padding: 30px 50px 50px;
+  }
+
+  .dish-history-modal__image {
+    height: 280px;
+  }
+
+  .dish-history-modal__history {
+    font-size: 1.15rem;
+    min-width: auto;
+  }
+}
+
+@media (max-width: 449px) {
+  .dish-history-modal__title {
+    font-size: 2.2rem;
+  }
+
+  .dish-history-modal__box {
+    padding: 30px 45px 50px;
+  }
+
+  .dish-history-modal__image {
+    height: 250px;
+  }
+
+  .dish-history-modal__history {
+    font-size: 1.05rem;
+  }
+
+  .dish-history-modal__back-button {
+    font-size: 1.2rem;
+    height: 40px;
+    padding: 0 18px;
+    bottom: -20px;
+  }
+}
+
+@media (max-width: 450px) and (min-height: 0px) and (max-height: 800px) {
+  .dish-history-modal__box {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .dish-history-modal__title {
+    font-size: 1.9rem;
+  }
+
+  .dish-history-modal__image {
+    height: 175px;
+  }
+
+  .dish-history-modal__history {
+    max-height: 230px;
+    padding-right: 7px;
+    font-size: 1rem;
+  }
+
+  .dish-history-modal__back-button {
+    font-size: 1rem;
+    height: 35px;
+    padding: 0 15px;
+    bottom: -20px;
+  }
 }
