--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,11 +1,11 @@
 .header__navbar {
-  /* border: 1px solid red; */
   display: flex;
   flex-direction: column;
 }
 
 .header__title-box {
   display: flex;
+  text-align: center;
   justify-content: center;
   align-items: center;
   height: 70px;
@@ -47,4 +47,42 @@
   font-family: var(--font-family-cabin-sketch);
   background: none;
   border: none;
+}
+
+@media (max-width: 800px) {
+  .header__logo {
+    display: none;
+  }
+}
+
+@media (max-width: 650px) {
+  .header__title-box {
+    height: 65px;
+  }
+
+  .header__title {
+    font-size: 2.4rem;
+  }
+
+  .header__option button {
+    font-size: 1.15rem;
+  }
+
+  .header__navbar-options {
+    height: 42px;
+  }
+}
+
+@media (max-width: 470px) {
+  .header__title-box {
+    height: 60px;
+  }
+
+  .header__title {
+    font-size: 2.1rem;
+  }
+
+  .header__option button {
+    font-size: 1.05rem;
+  }
 }
