--- a/src/components/DishHistoryModal/DishHistoryModal.css
+++ b/src/components/DishHistoryModal/DishHistoryModal.css
@@ -27,7 +27,6 @@
   background-color: white;
   padding: 30px 60px 60px;
   width: 80%;
-  max-height: 90vh;
   display: flex;
   flex-direction: column;
   gap: 25px;
@@ -43,6 +42,7 @@
 }
 
 .dish-history-modal__dish-data {
+  max-height: 65vh;
   display: flex;
   justify-content: center;
   gap: 50px;
@@ -56,7 +56,6 @@
 .dish-history-modal__history {
   min-width: 460px;
   font-size: 1.2rem;
-  max-height: 500px;
   padding-right: 15px;
   overflow-y: auto;
 }
@@ -89,7 +88,7 @@
 
 @media (max-width: 1269px) {
   .dish-history-modal__image {
-    height: 320px;
+    height: 250px;
   }
 }
 
@@ -104,8 +103,17 @@
   }
 
   .dish-history-modal__history {
-    max-height: 270px;
     min-width: 320px;
+  }
+}
+
+@media (max-width: 700px) {
+  .dish-history-modal__image {
+    height: 220px;
+  }
+
+  .dish-history-modal__history {
+    font-size: 1.05rem;
   }
 }
 
@@ -118,12 +126,7 @@
     padding: 30px 50px 50px;
   }
 
-  .dish-history-modal__image {
-    height: 280px;
-  }
-
   .dish-history-modal__history {
-    font-size: 1.15rem;
     min-width: auto;
   }
 }
@@ -135,14 +138,6 @@
 
   .dish-history-modal__box {
     padding: 30px 45px 50px;
-  }
-
-  .dish-history-modal__image {
-    height: 250px;
-  }
-
-  .dish-history-modal__history {
-    font-size: 1.05rem;
   }
 
   .dish-history-modal__back-button {
@@ -168,7 +163,6 @@
   }
 
   .dish-history-modal__history {
-    max-height: 230px;
     padding-right: 7px;
     font-size: 1rem;
   }
