--- a/src/pages/ChatMiskito/ChatMiskito.css
+++ b/src/pages/ChatMiskito/ChatMiskito.css
@@ -104,7 +104,7 @@
   width: 100%;
   position: relative;
   height: 55px;
-  padding: 0 20px;
+  padding: 0 60px 0 20px;
   border: 2px solid var(--color-orange-brown);
   border-radius: 12px;
   outline: none;
